# cgmes-to-linkml

./: .gitignore  README.md  pyproject.toml
cgmes2linkml/: __init__.py  main.py
cgmes2linkml/cgmes/: model.py  parse.py
cgmes2linkml/linkml/: generate.py  model.py
cimrdfs2linkml/: main.py
cimrdfs2linkml/cimrdfs/: parse.py  vocabulary.py
cimrdfs2linkml/linkml/: generate.py  model.py
data/: IEC61970-600-2_CGMES_3_0_0_RDFS2020_EQ.rdf
