[tool.poetry]
name = "cimrdfs2linkml"
version = "0.2.0"
description = ""
authors = ["Bart Kleijngeld <bartkl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xmltodict = "^0.13.0"
pydantic = "^2.5.3"
pyyaml = "^6.0.1"
inflection = "^0.5.1"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[tool.poetry.scripts]
cimrdfs2linkml = "cimrdfs2linkml.main:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
